Adicionando config-webpack experimental no dojo

--- a/src/main/resources/templates/inicio.html
+++ b/src/main/resources/templates/inicio.html
@@ -1,39 +1,42 @@
 <!DOCTYPE HTML>
 <html th:replace="~{layout :: layout(~{::title}, ~{::body})}" xmlns:th="http://www.thymeleaf.org">
+
 <head>
-    <title>Aceleradora Ágil - Esqueleto Ambulante</title>
+  <title>Aceleradora Ágil - Esqueleto Ambulante</title>
 </head>
+
 <body>
-<section class="hero is-primary is-fullheight-with-navbar">
+  <section class="hero is-primary is-fullheight-with-navbar">
     <div class="hero-body">
-        <div class="container">
-            <h1 class="title">
-                Esqueleto Ambulante
-            </h1>
-            <h2 class="subtitle">
-                Um projeto mínimo com exemplos.
-            </h2>
+      <div class="container">
+        <h1 class="title">
+          Esqueleto Ambulante
+        </h1>
+        <h2 class="subtitle">
+          Um projeto mínimo com exemplos.
+          <i class="fa fa-angle-up"></i>
 
-            <section class="columns is-multiline">
-                <div class="column is-4">
-                    <figure class="image is-128x128">
-                        <img src="/images/capoeira.gif">
-                    </figure>
-                </div>
-                <div class="column is-4">
-                    <figure class="image is-128x128">
-                        <img src="/images/waiting.gif">
-                    </figure>
-                </div>
-                <div class="column is-4">
-                    <figure class="image is-128x128">
-                        <img src="/images/dancing.gif">
-                    </figure>
-                </div>
-            </section>
+        </h2>
 
-        </div>
+        <section class="columns is-multiline">
+          <div class="column is-4">
+            <figure class="m-auto image is-128x128">
+              <img src="assets/images/capoeira.gif">
+            </figure>
+          </div>
+          <div class="column is-4">
+            <figure class="m-auto image is-128x128">
+              <img src="/assets/images/waiting.gif">
+            </figure>
+          </div>
+          <div class="column is-4">
+            <figure class="m-auto image is-128x128">
+              <img src="/assets/images/dancing.gif">
+            </figure>
+          </div>
+        </section>
+      </div>
     </div>
-</section>
+  </section>
 </body>
 </html>
