resolving create nany-to-many relation

--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -19,10 +19,10 @@
                 </svg>
             </a>
             <a class="navbar-item" href="/pessoa/lista">
-                <p class="titulo-nav">Pessoas</p>
+                <p class="titulo-nav">Produtos</p>
             </a>
-            <a class="navbar-item" href="/pessoa/cadastro">
-                <p class="titulo-nav">Cadastrar Pessoa</p>
+            <a class="navbar-item" href="/minhalista/cadastro">
+                <p class="titulo-nav">Criar Lista de Produtos</p>
             </a>
         </div>
     </nav>
