--- a/src/main/resources/templates/minhaLista/cadastroLista.html
+++ b/src/main/resources/templates/minhaLista/cadastroLista.html
@@ -13,7 +13,7 @@
         <div class="columns">
             <div class="column is-6">
                 <div class="box">
-                    <form action="/minhalista/criar" method="post">
+                    <form action="/minhalista/cadastro" method="post">
                         <div class="field">
                             <label class="label">Nome da sua Lista</label>
                             <div class="control">
